.build_counter